[modernize] Use Long.valueOf instead of new Long